revert dev script; rename app to index; tiny html fix; make css take full height

--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
 
       <footer class="app__footer">
         <div class="app__footer-inner">
-          <div class="footer__title">Assignment 6 - Nasr (c) Fall 2024</div>
+          <div class="footer__title">Artem Brandt (c)</div>
           <div class="app__badge">This app is for academic use only</div>
         </div>
       </footer>
