implement correct rendering of pressure and wind tabs

--- a/index.html
+++ b/index.html
@@ -112,18 +112,18 @@
 
               <section id="tab-pressure" class="pane">
                 <div class="kv">
-                  <div class="kv__row"><span class="kv__k">pressure</span><span class="kv__v">—</span></div>
-                  <div class="kv__row"><span class="kv__k">humidity</span><span class="kv__v">—</span></div>
-                  <div class="kv__row"><span class="kv__k">sea_level</span><span class="kv__v">—</span></div>
-                  <div class="kv__row"><span class="kv__k">grnd_level</span><span class="kv__v">—</span></div>
+                  <div class="kv__row"><span class="kv__k">pressure</span><span id="pressureValue" class="kv__v">—</span></div>
+                  <div class="kv__row"><span class="kv__k">humidity</span><span id="humidityValue" class="kv__v">—</span></div>
+                  <div class="kv__row"><span class="kv__k">sea_level</span><span id="seaLevelValue" class="kv__v">—</span></div>
+                  <div class="kv__row"><span class="kv__k">grnd_level</span><span id="groundLevelValue" class="kv__v">—</span></div>
                 </div>
               </section>
 
               <section id="tab-wind" class="pane">
                 <div class="kv">
-                  <div class="kv__row"><span class="kv__k">speed</span><span class="kv__v">—</span></div>
-                  <div class="kv__row"><span class="kv__k">gust</span><span class="kv__v">—</span></div>
-                  <div class="kv__row"><span class="kv__k">deg</span><span class="kv__v">—</span></div>
+                  <div class="kv__row"><span class="kv__k">speed</span><span id="windSpeedValue" class="kv__v">—</span></div>
+                  <div class="kv__row"><span class="kv__k">gust</span><span id="windGustValue" class="kv__v">—</span></div>
+                  <div class="kv__row"><span class="kv__k">deg</span><span id="windDegValue" class="kv__v">—</span></div>
                 </div>
               </section>
             </div>
