Remove unnecessary pills and add github source code black pill

--- a/index.html
+++ b/index.html
@@ -183,6 +183,12 @@
                 Pexels (Sunset video)
               </a>
             </li>
+            <li>
+              GitHub logo:
+              <a href="https://github.com/logos" target="_blank" rel="noopener noreferrer">
+                GitHub Logos
+              </a>
+            </li>
           </ul>
         </section>
 
@@ -196,12 +202,22 @@
             Unauthorized copying or redistribution of this project’s code and design is not permitted.
           </p>
         </section>
+      </div>
 
-        <!-- Bottom bar -->
-        <div class="footerBottom">
-          <span class="footerBottom__pill">Built by <strong>Artem Brandt</strong></span>
-          <span class="footerBottom__pill">OpenWeather + Pexels credits included</span>
-        </div>
+      <div class="footerRepo">
+        <a
+          class="footerRepo__link"
+          href="https://github.com/artembrandt03/Weather-API-Project"
+          target="_blank"
+          rel="noopener noreferrer"
+        >
+          <img
+            src="./assets/images/GitHub-Mark.png"
+            alt="GitHub logo"
+            class="footerRepo__icon"
+          />
+          <span>View original source code</span>
+        </a>
       </div>
     </footer>
     </div>
