Add background image attributions in footer

--- a/index.html
+++ b/index.html
@@ -192,6 +192,49 @@
           </ul>
         </section>
 
+        <!-- Background images -->
+        <section class="footerBlock" aria-label="Background image credits">
+          <h2 class="footerTitle">Background images</h2>
+          <ul class="footerList">
+            <li>
+              Night sky:
+              <a class="footerLink" href="https://unsplash.com/photos/cluster-of-stars-in-the-sky-qVotvbsuM_c" target="_blank" rel="noopener noreferrer">
+                Unsplash
+              </a>
+            </li>
+            <li>
+              Sunrise:
+              <a class="footerLink" href="https://unsplash.com/photos/trees-under-cloudy-sky-during-sunset--G3rw6Y02D0" target="_blank" rel="noopener noreferrer">
+                Unsplash
+              </a>
+            </li>
+            <li>
+              Morning:
+              <a class="footerLink" href="https://unsplash.com/photos/a-view-of-a-mountain-range-with-trees-and-mountains-in-the-background-Oq_Pj-QcbLM" target="_blank" rel="noopener noreferrer">
+                Unsplash
+              </a>
+            </li>
+            <li>
+              Daytime:
+              <a class="footerLink" href="https://unsplash.com/photos/white-clouds-in-the-sky-rTOQN2_aRjU" target="_blank" rel="noopener noreferrer">
+                Unsplash
+              </a>
+            </li>
+            <li>
+              Evening:
+              <a class="footerLink" href="https://unsplash.com/photos/photo-of-blue-and-red-clouds-n0AlE3-Ad8I" target="_blank" rel="noopener noreferrer">
+                Unsplash
+              </a>
+            </li>
+            <li>
+              Sunset:
+              <a class="footerLink" href="https://unsplash.com/photos/sunset-GPPAjJicemU" target="_blank" rel="noopener noreferrer">
+                Unsplash
+              </a>
+            </li>
+          </ul>
+        </section>
+
         <!-- Rights -->
         <section class="footerBlock" aria-label="Rights">
           <h2 class="footerTitle">Copyright</h2>
