Style the panels in a glass-like transparent minimalistic way

--- a/index.html
+++ b/index.html
@@ -106,6 +106,7 @@
               <span id="mainDesc" class="pill">—</span>
               <span id="mainIcon" class="icon" aria-hidden="true">⛅</span>
             </div>
+            </div>
 
             <nav class="tabs" aria-label="Weather tabs">
               <button class="tab is-active" type="button" data-tab="temp">Temp</button>
