--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
           <section class="card">
             <h2 class="card__title">Current Location</h2>
 
-            <button id="btnCurrentLocation" class="btn btn--primary" type="button">
+            <button id="btnCurrentLocation" class="btn btn--cta is-cta" type="button">
               Get Current Location
             </button>
 
