Make startup screen text bigger and add sun animation behind the button

--- a/index.html
+++ b/index.html
@@ -27,9 +27,18 @@
             <p class="startup__subtitle">Powered by OpenWeather API</p>
             <p class="startup__byline">Developed by <span class="headerName">Artem Brandt</span></p>
 
-            <button id="btnOpenApp" class="btn btn--open" type="button">
-              Open
-            </button>
+            <div class="startup__actions">
+              <img
+                class="startup__sun"
+                src="./assets/gifs/transparent-sun-animation.gif"
+                alt=""
+                aria-hidden="true"
+              />
+
+              <button id="btnOpenApp" class="btn btn--open" type="button">
+                Open
+              </button>
+            </div>
           </div>
         </section>
 
