Fix sun position and add source to attributions

--- a/index.html
+++ b/index.html
@@ -230,6 +230,17 @@
                 GitHub Logos
               </a>
             </li>
+            <li>
+              Sun animation:
+              <a
+                class="footerLink"
+                href="https://www.pinterest.com/pin/171207223319014724/"
+                target="_blank"
+                rel="noopener noreferrer"
+              >
+                Pinterest
+              </a>
+            </li>
           </ul>
         </section>
 
