Add a card for gemini and add gemini const example in settings.example

--- a/index.html
+++ b/index.html
@@ -185,6 +185,7 @@
         </section>
 
         <aside class="panel panel--right" aria-label="City Data">
+
           <section class="card">
             <h2 id="cityDataTitle" class="card__title">City data <span class="muted"></span></h2>
 
@@ -194,6 +195,19 @@
               <div class="kv__row"><span class="kv__k">Sunset</span><span id="sunsetVal" class="kv__v">—</span></div>
             </div>
           </section>
+
+          <section class="card" id="aiWeatherCard">
+            <h2 class="card__title">AI Weather Tips</h2>
+
+            <div id="aiWeatherContent" class="aiWeather">
+              <p class="muted">Generate tips based on current weather.</p>
+            </div>
+
+            <button id="btnGenerateAI" class="btn btn--primary">
+              Generate AI summary
+            </button>
+          </section>
+
         </aside>
       </main>
 
