Add gemini icon attribution and website showcase media in assets

--- a/index.html
+++ b/index.html
@@ -258,6 +258,17 @@
                 Pinterest
               </a>
             </li>
+            <li>
+              Gemini logo:
+              <a
+                class="footerLink"
+                href="https://commons.wikimedia.org/wiki/File:Google_Gemini_icon_2025.svg"
+                target="_blank"
+                rel="noopener noreferrer"
+              >
+                Wikimedia Commons
+              </a>
+            </li>
           </ul>
         </section>
 
